--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -274,7 +274,15 @@
 		&__item {
             position: relative;
             display: inline-block;
+            &:hover::before {
+                content: '';
+                opacity: 0.5;
+            }
             &.black {
+                &:hover::before {
+                    content: '';
+                    opacity: 0.5;
+                }
                 &::before {
                     content: '';
                     position: absolute;
@@ -287,9 +295,14 @@
                     background: #181D1B;
                     mix-blend-mode: normal;
                     opacity: 0.8;
+                    transition: all 0.3s ease-in-out;
                 }
             }
             &.red {
+                &:hover::before {
+                    content: '';
+                    opacity: 0.5;
+                }
                 &::before {
                     content: '';
                     position: absolute;
@@ -302,6 +315,7 @@
                     background: #811D25;
                     mix-blend-mode: normal;
                     opacity: 0.8;
+                    transition: all 0.3s ease-in-out;
                 }
             }
             &::before {
@@ -316,6 +330,7 @@
                 background: #05A062;
                 mix-blend-mode: normal;
                 opacity: 0.8;
+                transition: all 0.3s ease-in-out;
             }
             &.big-first {
                 grid-column-start: 1;
@@ -348,19 +363,25 @@
             min-height: 180px;
             max-height: 180px;
             img {
-                max-width: 466px;
+                display: block;
+                // max-width: 466px;
                 width: 100%;
                 height: 100%;
-                min-height: 180px;
-                max-height: 180px;
+                min-height: 184px;
+                max-height: 184px;
                 object-fit: cover;
+
+                @media (max-width:1000px) {
+                    min-height: 180px;
+                    max-height: 180px;
+                }
             }
             &.big {
                 max-width: 466px;
                 width: 100%;
                 height: 100%;
-                min-height:361px;
-                max-height: 361px;
+                min-height:369px;
+                max-height: 369px;
                 @media (max-width:1000px) {
                     max-width: 466px;
                     width: 100%;
@@ -372,8 +393,8 @@
                     max-width: 466px;
                     width: 100%;
                     height: 100%;
-                    min-height: 361px;
-                    max-height: 361px;
+                    min-height: 369px;
+                    max-height: 369px;
                     object-fit: cover;
                     @media (max-width:1000px){
                         max-width: 466px;
@@ -416,8 +437,8 @@
                 }
                 @media (max-width:$mobile){
                     font-size: 13px;
-                    line-height: 5px !important;
-                    letter-spacing: -0.8px;
+                    // line-height: 5px !important;
+                    // letter-spacing: -0.8px;
                 }
             }
 		}
@@ -708,6 +729,23 @@
             max-width: 1050px;
             // width: 100%;
             // justify-content: space-between;
+            a {
+                &:hover {
+                    .about-slider__picture {
+
+                        img {
+                            opacity: 1;
+                        }
+
+                        &::before {
+                            content: '';
+                            background: transparent;
+
+                        }
+                    }
+                }
+
+            }
             @media (max-width:1400px){
                 max-width: 1400px;
                 justify-content: space-between;
@@ -814,6 +852,7 @@
                 background: #F9F9F9;
                 mix-blend-mode: normal;
                 opacity: 0.7;
+                transition: all 0.3s ease-in-out;
             }
 		}
         &__picture, &__picture img {
@@ -824,6 +863,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            transition: all 0.3s ease-in-out;
             @media (max-width:1400px){
                 min-width: auto;
                 max-width: auto;
@@ -879,6 +919,33 @@
     justify-content: center;
     
     overflow-x: auto;
+    &::-webkit-scrollbar {
+        height: 6px;
+    }
+
+    &::-webkit-scrollbar-button {
+        height: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+        height: 6px;
+    }
+
+    &::-webkit-scrollbar-track-piece {
+        height: 6px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        height: 6px;
+    }
+
+    &::-webkit-scrollbar-corner {
+        height: 6px;
+    }
+
+    &::-webkit-resizer {
+        height: 6px;
+    }
     @media (max-width:1680px){
         justify-content: flex-start;
     }
@@ -1120,17 +1187,29 @@
     }
 
     &__title {
-        font-size: 40px;
-        font-weight: 700;
-        line-height: 40px;
+        * {
+            font-size: 40px;
+            font-weight: 700;
+            line-height: 40px;
+            @media (max-width:1050px) {
+                font-size: 25px;
+                line-height: 30px;
+            }
+            }
+
         &.red {
             * {
                 color: $red;
             }
         }
-        @media (max-width:1050px) {
-            font-size: 25px;
-            line-height: 30px;
+        a {
+            text-decoration: underline;
+            text-decoration-color: transparent;
+            transition: all 0.3s ease-in-out;
+
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
 
@@ -1192,13 +1271,26 @@
     }
 
     &__card-title {
-        font-size: 30px;
-        font-weight: 600;
-        line-height: 40px;
         margin-bottom: 8px;
-        @media (max-width:1050px){
-            font-size: 20px;
-            line-height: 30px;
+
+        * {
+            font-size: 30px;
+            font-weight: 600;
+            line-height: 40px;
+            @media (max-width:1050px) {
+                font-size: 20px;
+                line-height: 30px;
+            }
+            }
+
+            a {
+                text-decoration: underline;
+                text-decoration-color: transparent;
+                transition: all 0.3s ease-in-out;
+
+                &:hover {
+                    text-decoration: underline;
+                }
         }
     }
 
