--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -66,7 +66,17 @@ body {
 
 a { color: $black; }
 button { background: transparent; }
-body, a, p, button, ul, li, select, option, input, textarea, input::placeholder, textarea::placeholder {
+body,
+a,
+p,
+ul,
+li,
+select,
+option,
+input,
+textarea,
+input::placeholder,
+textarea::placeholder {
     // font-family: 'Righteous', cursive;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
